# vert_remap

./: .gitignore  CMakeLists.txt  README.md
run/: Q.txt  debug_local.sh  dp.txt  grid_stg.txt  run_local.sh  submit.sh  test_local.sh  vert_remap.err  vert_remap.out  vert_remap_42604544.err  vert_remap_42604544.out  vert_remap_42678772.err  vert_remap_42678772.out  vert_remap_42678831.err
run/output/: out_0004.nc
src/: CMakeLists.txt  main.F90
src/conv_comb_mod/: CMakeLists.txt  conv_comb_base.F90
src/get_insecs_mod/: CMakeLists.txt  get_insecs_base.F90
src/mass_borrow_mod/: CMakeLists.txt  mass_borrow_base.F90
src/output_mod/: CMakeLists.txt  CMakeLists.txt~  output_mod.F90
src/utils_mod/: CMakeLists.txt  netcdf_utils_mod.F90  netcdf_utils_mod.F90~  remap_check_utils_mod.F90  sys_utils_mod.F90  utils_mod.F90  utils_mod.F90~
src/vertremap_mod/: CMakeLists.txt  vertremap_base.F90  vertremap_cs08.F90  vertremap_new.F90  vertremap_ngh.F90  vertremap_nmb.F90  vertremap_redux.F90  vertremap_redux_2.F90
tools/: approx_plot.py  debug.nb  error_compare_plot.py  error_plot.py  gen_plots_local.sh  main.py  massdiff_plot.py  masserror_plot.py  pw_diff_plot.py  pw_error_plot.py
